--- a/main.css
+++ b/main.css
@@ -58,7 +58,9 @@ h3 {
 .cups {
     display: flex;
     flex-wrap: wrap;
-    width: 320px;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
 }
 
 .cup.cup-small.full {
@@ -67,7 +69,7 @@ h3 {
 }
 
 
-.remainder {
+.remained {
     display: flex;
     flex-direction: column;
     align-items: center;
